--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="container">
             <div class="mb-5">
                 <div class="mb-3">
-                    <p class="m-0">PD211</p>
+                    <p class="m-0">This space is dedicated to sharing my journey into the mesmerizing world of Generative Art. Whether it’s crafting intricate visuals with TouchDesigner, sculpting 3D masterpieces in Blender, or building immersive experiences with Unity, you'll find insights, tutorials, and experiments here.</p>
                     <hr>
                 </div>
                 <h1>Generative Art</h1>
